# fnmar

./: .clangd  .gitignore  CMakeLists.txt  README.md  default.nix  dev_aliases.sh  dev_shell.sh  flake.nix  fnmar.txt  mk.sh
dev/vscode/: launch.json
lib/krs/: CMakeLists.txt  README.md  dynamic_array.h  krs_cc_ext.h  krs_cliopt.c  krs_cliopt.h  krs_cliopt_prexy.h  krs_dynamic_array.c  krs_dynamic_array.h  krs_log.c  krs_log.h  krs_span.c  krs_span.h  krs_str.c  krs_str.h  krs_to_cstr.h  krs_types.h  krs_vec.inc.h  krs_x.h  krs_x_struct_fprintf_repr.h  krs_xenum.h  krs_xgen.awk  krs_xstruct.h  str.c  xstruct.h
src/: CMakeLists.txt  dynamic_array.c  main.c  main_prexy.h  main_xgen.h  prelude.h  str.c  str.h  xenum.h  xgen_main.h  xstruct.h
